# aion-trust

./: .gitignore  .impeccable.md  CLAUDE.md  Cargo.toml  README.md  clippy.toml  deny.toml
.cargo/: mutants.toml
.claude/: settings.json
.claude/agents/: graydon.md  hoare.md  lamport.md  liskov.md  rivest.md  saltzer.md
.claude/commands/: gate.md  review.md
.claude/hooks/: fmt.sh  guard.sh
.github/workflows/: ci.yml
crates/aion-trust-claims/: Cargo.toml
crates/aion-trust-claims/src/: anchor.rs  bodies.rs  claim.rs  disclosure.rs  fields.rs  lib.rs  nonce.rs  predicate.rs  presentation.rs
crates/aion-trust-claims/tests/: adversarial.rs  replay.rs  robustness.rs
crates/aion-trust-cli/: Cargo.toml
crates/aion-trust-cli/src/: main.rs
crates/aion-trust-core/: Cargo.toml
crates/aion-trust-core/src/: encoding.rs  error.rs  id.rs  identity.rs  lib.rs  merkle.rs  time.rs
crates/aion-trust-interop/: Cargo.toml
crates/aion-trust-interop/src/: didkey.rs  error.rs  jsonget.rs  lib.rs  rfc3339.rs  vc.rs  vp.rs
crates/aion-trust-registry/: Cargo.toml
crates/aion-trust-registry/src/: lib.rs
crates/aion-trust-registry/tests/: accreditation.rs  predicates.rs
crates/aion-trust-wallet/: Cargo.toml
crates/aion-trust-wallet/src/: lib.rs
crates/aion-trust-wallet/tests/: reuse.rs
crates/aion-trust-web/: Cargo.toml
crates/aion-trust-web/src/: issuer.rs  lib.rs  parse.rs  state.rs  verifier.rs  view.rs  walkthrough.rs  wallet.rs
crates/aion-trust-web/web/: app.css
demo/: DEMO-MANIFEST.md  durations.json  durations.txt  interop-vc.json  interop.html  record-demo.js  script.md
demo/narration/: scene-1.txt  scene-2.txt  scene-3.txt  scene-4.txt  scene-5.txt  scene-6.txt  scene-7.txt  scene-8.txt
docs/: ARCHITECTURE.md  COMPLIANCE.md  COST-MODEL.md  DATA-MODEL.md  GLOSSARY.md  INTEROP.md  REVIEW-PHASE1.md  ROADMAP.md  TRUST-MODEL.md  VISION.md  WEB-SURFACES.md  WORKFLOWS.md
mutants.out/: lock.json  mutants.json  outcomes.json
mutants.out.old/: lock.json
mutants.out.old/diff/: crates__aion-trust-claims__src__claim.rs_line_124_col_9.diff  crates__aion-trust-claims__src__claim.rs_line_128_col_9.diff  crates__aion-trust-claims__src__claim.rs_line_134_col_37.diff  crates__aion-trust-claims__src__claim.rs_line_134_col_9.diff  crates__aion-trust-claims__src__claim.rs_line_138_col_31.diff  crates__aion-trust-claims__src__claim.rs_line_149_col_50.diff  crates__aion-trust-claims__src__claim.rs_line_165_col_9.diff  crates__aion-trust-claims__src__claim.rs_line_168_col_9.diff  crates__aion-trust-claims__src__claim.rs_line_171_col_9.diff  crates__aion-trust-claims__src__claim.rs_line_174_col_9.diff  crates__aion-trust-claims__src__claim.rs_line_177_col_9.diff  crates__aion-trust-claims__src__claim.rs_line_181_col_9.diff  crates__aion-trust-claims__src__claim.rs_line_184_col_9.diff  crates__aion-trust-claims__src__claim.rs_line_184_col_9_001.diff  crates__aion-trust-claims__src__claim.rs_line_189_col_5.diff  crates__aion-trust-claims__src__claim.rs_line_189_col_5_001.diff  crates__aion-trust-claims__src__claim.rs_line_201_col_5.diff  crates__aion-trust-claims__src__claim.rs_line_201_col_5_001.diff  crates__aion-trust-claims__src__claim.rs_line_201_col_5_002.diff  crates__aion-trust-claims__src__claim.rs_line_22_col_9.diff  crates__aion-trust-claims__src__claim.rs_line_22_col_9_001.diff  crates__aion-trust-claims__src__claim.rs_line_22_col_9_002.diff  crates__aion-trust-claims__src__claim.rs_line_37_col_13.diff  crates__aion-trust-claims__src__claim.rs_line_37_col_26.diff  crates__aion-trust-claims__src__claim.rs_line_37_col_59.diff  crates__aion-trust-claims__src__claim.rs_line_37_col_9.diff  crates__aion-trust-claims__src__claim.rs_line_37_col_9_001.diff  crates__aion-trust-claims__src__claim.rs_line_64_col_9.diff  crates__aion-trust-claims__src__claim.rs_line_99_col_9.diff  crates__aion-trust-claims__src__presentation.rs_line_110_col_5.diff  crates__aion-trust-claims__src__presentation.rs_line_126_col_5.diff  crates__aion-trust-claims__src__presentation.rs_line_129_col_44.diff  crates__aion-trust-claims__src__presentation.rs_line_131_col_65.diff  crates__aion-trust-claims__src__presentation.rs_line_132_col_25.diff  crates__aion-trust-claims__src__presentation.rs_line_132_col_40.diff  crates__aion-trust-claims__src__presentation.rs_line_132_col_47.diff  (+69 more)
scripts/: gate.sh
scripts/gates/: secret-scan.sh  (+1 more)
