[workspace]
resolver = "2"
members = [
    "crates/aion-trust-core",
    "crates/aion-trust-claims",
    "crates/aion-trust-wallet",
    "crates/aion-trust-cli",
]

[workspace.package]
edition = "2021"
rust-version = "1.85"
license = "Apache-2.0"
repository = "https://github.com/aion-context/aion-trust"

[workspace.dependencies]
aion-trust-core = { path = "crates/aion-trust-core" }
aion-trust-claims = { path = "crates/aion-trust-claims" }
aion-trust-wallet = { path = "crates/aion-trust-wallet" }
aion-context = { path = "../aion-context" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
