[package]
name = "aion-trust-cli"
version = "0.1.0"
publish = false
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI for the aion-trust kernel: issue, present, and verify claims."

[[bin]]
name = "aion-trust"
path = "src/main.rs"

[dependencies]
aion-trust-core.workspace = true
aion-trust-claims.workspace = true
aion-context.workspace = true
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
