[package]
name = "aion-trust-core"
version = "0.1.0"
publish = false
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared identities, ids, encoding, and errors for aion-trust."

[dependencies]
aion-context.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
