[package]
name = "aion-trust-interop"
version = "0.1.0"
publish = false
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "W3C VC/VP and did:key export/import for aion-trust (native Ed25519 proof preserved)."

[dependencies]
aion-trust-core.workspace = true
aion-trust-claims.workspace = true
aion-context.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
