[package]
name = "aion-trust-registry"
version = "0.1.0"
publish = false
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Issuer accreditation (K-of-N), revocation, and the non-PII ledger record."

[dependencies]
aion-trust-core.workspace = true
aion-trust-claims.workspace = true
aion-context.workspace = true
serde.workspace = true
serde_json.workspace = true
